<resources>
    <string name="app_name">MusicIn</string>
    <string name="login">Login</string>
    <string name="slogan">The place where musicians and enterprises come together</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="choose_your_type">Choose your type</string>
    <string name="next">Next</string>
    <string name="individual">Individual</string>
    <string name="enterprise">Enterprise</string>
    <string name="musician">Musician</string>
    <string name="technician">Technician</string>
    <string name="name">Name</string>
    <string name="instruments">Instruments</string>
    <string name="error_password">Password can\'t be less than 5 characters</string>
    <string name="favourite_artists">Favourite Artists</string>
    <string name="age">Age</string>
    <string name="genre">Genre</string>
    <string name="nif">Nif</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="search_members">Search Members</string>
    <string name="search_events">Search Events</string>
    <string name="birthday">Birthday</string>
    <string name="favourite_genres">Favourite Genres</string>
    <string name="no_user_error">There\'s no user with this email</string>
    <string name="login_error">Incorrect email or password</string>
    <string name="settings">Profile Settings</string>
    <string name="logout">Logout</string>
    <string name="my_bands">My Bands</string>
    <string name="future_events">Future Events</string>
    <string name="requests">Requests</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="save">Save</string>
    <string name="experience_in_music">Experience in Music</string>
    <string name="years_of_playing">Years of playing</string>
    <string name="places_where_you_played">Places you have played in</string>
    <string name="music_school_background">Music school background</string>
    <string name="spotify">Spotify</string>
    <string name="new_request_to_form_a_band">New Request To Form A Band</string>
    <string name="genre_dots">Genre:</string>
    <string name="number_of_members_needed">Number of Members Needed:</string>
    <string name="request_to_join_a_band">Request to join this band</string>
    <string name="instruments_needed">Instruments needed:</string>
    <string name="enter_instrument_here">Enter Instrument Here</string>
    <string name="already_have_members">Already have some members aligned? Add them here:</string>
    <string name="add_member">Add Member</string>
    <string name="search_member">Search Member</string>
    <string name="submit">Submit</string>
    <string name="insert_genre">Insert Genre</string>
    <string name="hyperlink">Know more about the place at <a href="https://hardrockcafe.com">hardrockcafe.com</a></string>
    <string name="social_media">Social Media Url</string>
    <string name="how_long_have_i_played_my_instrument">How long have I played my instrument?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="band_name_dots">Band Name:</string>
    <string name="insert_name">Insert Name</string>
    <string name="add_formed_band">Add formed band</string>
    <string name="add_to_my_bands">Add to my bands</string>
    <string name="insert_member">Insert Member</string>
    <string name="enter_member_here">Enter member here</string>

</resources>