<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFormBandRequestActivity"
    android:background="@drawable/gradient_grey">


    <TextView
        android:id="@+id/new_request_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/new_request_to_form_a_band"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/new_request_txt"
        app:layout_constraintStart_toStartOf="@+id/new_request_txt"
        app:layout_constraintTop_toBottomOf="@+id/new_request_txt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/genre_dots"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/genre_spn"
                    android:layout_width="150dp"
                    android:layout_height="33dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/instruments_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_genre"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/instruments_needed"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/instruments_header"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/instruments_txt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <EditText
                    android:id="@+id/needed_instruments_ed_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/enter_instrument_here" />

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/needed_instruments_ed_txt"
                    android:src="@drawable/list_add" />

            </RelativeLayout>

            <ListView
                android:id="@+id/instruments_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instruments_header"
                android:layout_alignStart="@+id/instruments_header"
                android:layout_alignEnd="@+id/instruments_header"
                android:background="@color/white" />

            <TextView
                android:id="@+id/add_members_txt"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruments_lv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/already_have_members"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>


            <RelativeLayout
                android:id="@+id/members_header"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/add_members_txt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <EditText
                    android:id="@+id/members_ed_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/add_member"
                    android:inputType="textAutoCorrect" />

                <ImageView
                    android:id="@+id/add_member_img"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/members_ed_txt"
                    android:src="@drawable/list_add" />

            </RelativeLayout>

            <ListView
                android:id="@+id/members_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/members_header"
                android:layout_alignStart="@+id/members_header"
                android:layout_alignEnd="@+id/members_header"
                android:background="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/members_lv"
                android:layout_alignStart="@+id/members_header"
                android:layout_alignEnd="@id/members_header"
                android:layout_marginTop="35dp"
                android:text="@string/submit"
                android:textSize="20sp"/>

        </RelativeLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>