<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectIndEntActivity"
    android:background="@drawable/gradient_grey">

    <TextView
        android:id="@+id/enterprise_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enterprise"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/enterprise_img"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/enterprise_img"
        app:layout_constraintTop_toBottomOf="@+id/enterprise_img" />

    <ImageView
        android:id="@+id/enterprise_img"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:cropToPadding="true"
        android:padding="5dp"
        android:src="@drawable/businessman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/individual_img"
        app:layout_constraintTop_toBottomOf="@+id/choose_type_txt" />

    <TextView
        android:id="@+id/choose_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_type"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/individual_img"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/border"
        android:cropToPadding="true"
        android:padding="5dp"
        android:src="@drawable/individual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_type_txt" />

    <TextView
        android:id="@+id/individual_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/individual"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/individual_img"
        app:layout_constraintStart_toStartOf="@+id/individual_img"
        app:layout_constraintTop_toBottomOf="@+id/individual_img" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_bttn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterprise_txt"
        app:layout_constraintVertical_bias="0.73" />


</androidx.constraintlayout.widget.ConstraintLayout>